# Blackjack

./: LICENSE  README.md  TODO.md  package.json  vite.config.js
src/: app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20241015110720_init.sql  20241016082854_add_player.sql
src-tauri/src/: app_commands.rs  backend_error.rs  lib.rs
src-tauri/src/db/: mod.rs  my_sql_db.rs  sqlite_db.rs
src-tauri/src/db/tables/players/: commands.rs  mod.rs
src-tauri/src/models/: card.rs
src/lib/: Blackjack.svelte  Card.svelte  Hand.svelte  MinusIcon.svelte  Overlay.svelte  PlusIcon.svelte  StartPrompt.svelte  utils.ts
src/lib/Card/: Card.svelte  CardBack.svelte  CardSymbols.svelte
src/lib/controls/: Button.svelte  Controls.svelte  IconButton.svelte  TextBox.svelte
src/lib/game/: BetPool.ts  GameEvent.ts  Hand.ts  HandModel.ts  Player.ts  PlayerHand.ts  game.ts  stores.ts
src/lib/game/card/: Card.ts  CardModel.ts  Rank.ts
src/lib/models/: Card.ts  CardModel.ts  Suit.ts
src/routes/: +page.svelte
